--- a/package.json
+++ b/package.json
@@ -28,17 +28,22 @@
     "@ionic/angular": "^6.5.3",
     "angularx-qrcode": "^15.0.1",
     "bootstrap": "^5.2.3",
+    "html-to-pdfmake": "^2.4.16",
+    "html2canvas": "^1.4.1",
     "i": "^0.3.7",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^3.1.2",
     "material-design-icons-iconfont": "^6.7.0",
     "material-icons-font": "^2.1.0",
     "materialize-css": "^1.0.0-rc.2",
     "ngx-toastr": "^16.0.2",
     "npm": "^9.4.1",
+    "pdfmake": "^0.2.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "tw-elements": "^1.0.0-alpha13",
     "uninstall": "^0.0.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
@@ -48,6 +53,7 @@
     "@capacitor/cli": "^4.6.3",
     "@ionic/angular-toolkit": "latest",
     "@types/jasmine": "~4.3.0",
+    "@types/papaparse": "^5.3.7",
     "autoprefixer": "^10.4.13",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
