Fixed a few bugs Made the QR list a non mobile list (because it's small enough that it doesn't need it and to conserve consistent printing)

--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@capacitor-community/barcode-scanner": "^3.0.1",
+    "@capacitor-community/file-opener": "^1.0.4",
     "@capacitor/android": "4.6.3",
+    "@capacitor/browser": "^4.1.1",
     "@capacitor/core": "^4.6.3",
+    "@capacitor/filesystem": "^4.1.4",
     "@ionic/angular": "^6.5.3",
     "angularx-qrcode": "^15.0.1",
     "bootstrap": "^5.2.3",
+    "capacitor-blob-writer": "^1.1.9",
     "html-to-pdfmake": "^2.4.16",
     "html2canvas": "^1.4.1",
     "i": "^0.3.7",
